--- a/representante.html
+++ b/representante.html
@@ -63,7 +63,7 @@
               
            </div>
            <div  class="col-md-6 col-xs-12 m-auto text-center">
-            <p class="text-start text-black fw-bold  ">En Lift, Somos representantes de Estanterias LARA. Sectorizados en el rubro metalúrgico, se especializan en la fabricación de Sistemas de Almacenaje.
+            <p class="text-start text-black fw-bold mt-3 ">En Lift, Somos representantes de Estanterias LARA. Sectorizados en el rubro metalúrgico, especializados en la fabricación de Sistemas de Almacenaje.
             </p>
             <div  class="col m-auto text-center mt-2">
 
@@ -121,7 +121,8 @@
                 <h4 class="telefonos fw-bold">+54 9 2616 39-0403</h4>
               <hr class="linea final">
               
-              <h3 class="titulo-formulario">administracion@liftautoelevadores.com </h3>
+              <h3 class="titulo-formulario">mantenimiento@liftautoelevadores.com </h3>
+              <h3 class="titulo-formulario">liftmantenimiento@gmail.com </h3>
                 </div>
                 <img class="logoamarillo" src="./imagenes/logochico1.jpeg" alt="" width="50px"> 
         </div>
