--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <img src="imagenes/fincaf.png" alt="Logo 5">
              <img src="imagenes/finca.png" alt="Logo 7">
              <img src="imagenes/luis.png" alt="Logo 8">
-             <img src="imagenes/img5.png" alt="Logo 7">
+           
              <img src="imagenes/samaco.png" alt="Logo 5">
              <img src="imagenes/img3   (3).webp" alt="Logo 7">
 
@@ -321,7 +321,8 @@
         <div class=" m-auto">
             <a class="redes1" href="https://youtu.be/YvhI1yljqeE?feature=shared" target="_blank" ><i class="fa-brands fa-youtube"></i></a>
             <a class="redes1" href="https://www.instagram.com/lift.autoelevadores/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
-            <p class="derechos">Todos los derechos reservados por Lift Autoelevadores - 2024 - NL</p>
+            <a class="redes1" href="https://www.facebook.com/profile.php?id=61556546189919&mibextid=ZbWKwL"  target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <p class="derechos">Todos los derechos reservados por Lift Autoelevadores - 2024 - NL Desarrollo Web</p>
     </footer>
     
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
