--- a/distribuidores.html
+++ b/distribuidores.html
@@ -58,10 +58,10 @@
         
         <div class="row" id="nosotros1"> 
                     
-           <div class="col-md-5 col-xs-12 sobremi1 m-auto foto ">
-               <p class="text-center text-black fw-bold ">En Lift, Somos agentes de la marca de montacargas  y palas cargadoras más reconocida de China HELI. Acercamos a nuestros clientes opciones competitivas en precio, tecnología y la más alta calidad. Contamos con un equipo de especialistas totalmente capacitados, a fin de ofrecer el mejor servicio post venta y brindar el apoyo necesario a nuestros clientes.</p>
+           <div class="col-md-5 col-xs-12 sobremi1 m-auto foto  ">
+               <p class="text-center text-black fw-bold mt-2 ">En Lift, Somos agentes de la marca de montacargas  y palas cargadoras más reconocida de China HELI. Acercamos a nuestros clientes opciones competitivas en precio, tecnología y la más alta calidad. Contamos con un equipo de especialistas totalmente capacitados, a fin de ofrecer el mejor servicio post venta y brindar el apoyo necesario a nuestros clientes.</p>
                 <div class="row m-auto ">
-                    <div  class="col-6 col-md-6 text-end  ">
+                    <div  class="col-6 col-md-6 text-end doslogos ">
                         <img class="" src="./imagenes/logomovilift.png" alt="" width="160px">
                     </div>
                     <div  class="col-6 col-md-6 text-end doslogos ">
@@ -69,8 +69,8 @@
                     </div>
                 </div>
            </div>
-           <div  class="col-md-7 col-xs-12 m-auto ">
-                   <img class="img-fluid foto-nosotros" src="./imagenes/auto4.jpg" alt="obra"   >  
+           <div  class="col-md-7 col-xs-12 m-auto  mt-3 ">
+                   <img class="img-fluid foto-nosotros" src="./imagenes/auto45.jpg" alt="obra"  width="" >  
                </div>
            </div> 
        </div>
