--- a/representante.html
+++ b/representante.html
@@ -59,20 +59,20 @@
         <div class="row" id="nosotros"> 
                     
            <div class="col-md-6 col-xs-12 sobremi m-auto foto">
-            <img class="img-fluid foto-nosotros" src="./imagenes/esta3.jpeg" alt="obra"   >  
+            <img class="img-fluid foto-nosotros" src="./imagenes/esta7.jpg" alt="obra"   >  
               
            </div>
            <div  class="col-md-6 col-xs-12 m-auto text-center">
-            <p class="text-start text-black fw-bold mt-3 ">En Lift, Somos representantes de Estanterias LARA. Sectorizados en el rubro metalúrgico, especializados en la fabricación de Sistemas de Almacenaje.
+            <p class="text-start text-black fw-bold mt-3 ">En Lift, Somos representantes de Estanterias LARA. Especializados en la fabricación de sistemas de almacenamiento, con los siguientes productos:.
             </p>
             <div  class="col m-auto text-center mt-2">
 
                 <ul class="fw-bold text-start">
-                    <li>Racks selectivos</li>
-                    <li>Racks penetrables </li>
-                    <li> Racks doble profundidad</li>
-                    <li> Estanterias</li>
+                    <li>Racks selectivos(selectivos, penetrables, doble profundidad, carga manual, dinámicos, etc.)</li>
+                    <li>Mini Racks </li>
                     <li> Entrepisos</li>
+                    <li>Estanterías metálicas</li>
+                    <li> Contenedores metálicos</li>
                 </ul>
             </div>
                 <div class="row">
