--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div> 
                    
                     <div class="redes">
-                        <a class="" href="https://wa.me/542612631609?text=¡Hola,%20quisiera%20mas%20información!" target="_blank" >Presupuesto</a>
+                        <a class="" href="https://wa.me/542612631609?text=¡Hola,%20quisiera%20pedir%20un%20presupuesto%20sobre..." target="_blank" >Presupuesto</a>
                         
                     </div>
                 </div>
