--- a/representante.html
+++ b/representante.html
@@ -36,7 +36,7 @@
                     </div> 
                     <div class="redes">
                         <a href="https://www.youtube.com/watch?v=YvhI1yljqeE" target="_blank" ><i class="fa-brands fa-youtube"></i></a>
-                       
+                        <a class="redes1" href="https://www.facebook.com/profile.php?id=61556546189919&mibextid=ZbWKwL"  target="_blank"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/lift.autoelevadores/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
                     </div>
                 </div>
