--- a/representante.html
+++ b/representante.html
@@ -63,12 +63,12 @@
               
            </div>
            <div  class="col-md-6 col-xs-12 m-auto text-center">
-            <p class="text-start text-black fw-bold mt-3 ">En Lift, Somos representantes de Estanterias LARA. Especializados en la fabricación de sistemas de almacenamiento, con los siguientes productos:
+            <p class="text-start text-black fw-bold mt-3 ">En Lift, Somos representantes de Estanterías LARA. Especializados en la fabricación de sistemas de almacenamiento, con los siguientes productos:
             </p>
             <div  class="col m-auto text-center mt-2">
 
                 <ul class="fw-bold text-start">
-                    <li>Racks selectivos(selectivos, penetrables, doble profundidad, carga manual, dinámicos, etc.)</li>
+                    <li>Racks (selectivos, penetrables, doble profundidad, carga manual, dinámicos.)</li>
                     <li>Mini Racks </li>
                     <li> Entrepisos</li>
                     <li>Estanterías metálicas</li>
