--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
-    <meta name="description" content="Sitio especialistas en detección de fugas de agua.">
-    <meta name="keywords"  content="">
+    <meta name="description" content="Sitio especializado en mantenimiento de autoelevadores.">
+    <meta name="keywords" content="Autoelevadores, Heli, servicio técnico, repuestos, mantenimiento, capacitaciónes, 960/15, técnicos, diagnósticos, almacenamiento, estanterías, racks, neumaticos, apilador, zorras, neumaticos, filtros, cargadoras, autoelevadores eléctricos, combustión">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="icon" type="image/jpg" href="./imagenes/logochico.jpeg" />
@@ -321,7 +321,7 @@
     </div>
 </section>
 
-    <div class="container" id="fon">
+    <div class="container mt-2" id="fon">
         <div class="row">
             <div class="col-6 portada text-center">
                 <img class="img-fluid fondo2 text-center" src="./imagenes/4.png" alt=""  >
