--- a/distribuidores.html
+++ b/distribuidores.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
-    <meta name="description" content="Sitio especialistas en detección de fugas de agua.">
-    <meta name="keywords"  content="">
+    <meta name="description" content="Sitio especializado en mantenimiento de autoelevadores.">
+    <meta name="keywords" content="Autoelevadores, Heli, servicio técnico, repuestos, mantenimiento, capacitaciónes, 960/15, técnicos, diagnósticos, almacenamiento, estanterías, racks, neumaticos, apilador, zorras, neumaticos, filtros, cargadoras, autoelevadores eléctricos, combustión">
     <link rel="icon" type="image/jpg" href="./imagenes/logochico.jpeg" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
