--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
             <div class="servicio">
                 <span class="icono"><img src="./imagenes/gear-fill.svg" alt="" width="38px"></span>
-                  <h4 class="text-light">PRESUESTOS</h4>
+                  <h4 class="text-light">PRESUPUESTOS</h4>
                   <hr class="text-light">
                   <ul class="m-auto fw-bold text-light text-start" >
                     <li>Repuestos originales Heli.</li>
